--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorForeground">#42AEBD</color>
+    <color name="colorButtons">#D8C99B</color>
+    <color name="colorBackground">#7EBDC3</color>
+    <color name="colorText">#7B8D93</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
