--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorBackground">#7EBDC3</color>
     <color name="colorText">#7B8D93</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="aux">#058ED9</color>
+    <color name="aux2">#00F2F2</color>
 
     <!-- Base Android Colors -->
     <color name="colorPrimary">#27FF00</color>
