--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -1,32 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/gradient">
 
-    android:background="@drawable/gradient"
-    tools:context=".Tracker">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <Button
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:layout_gravity="start|center"
+
+            android:onClick="goBack"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <Button
+            android:id="@+id/profile"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+
+            android:layout_gravity="end|center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="$Kilometers"
+        android:layout_gravity="center"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Walked distance"
+        android:layout_gravity="center"
+        />
+
+
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
+
+        android:layout_marginTop="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="300dp"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_below="@id/button2"
+        android:layout_height="match_parent"
 
         android:background="@drawable/gradient"
         tools:context=".Tracker"
-        tools:layout="@layout/activity_tracker" />
+        />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentStart="true"
 
-        android:onClick="goBack"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="260dp" />
 
-</RelativeLayout>
+
+
+</LinearLayout>
