--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorForeground</item>
-        <item name="colorPrimaryDark">@color/colorForeground</item>
+        <item name="colorPrimary">@color/aux2</item>
+        <item name="colorPrimaryDark">@color/aux2</item>
         <item name="colorAccent">@android:color/holo_green_light</item>
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:button">@color/colorButtons</item>
