--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,14 +13,14 @@
         android:layout_height="wrap_content"
         android:background="#00BCD4"
         android:minHeight="?attr/actionBarSize"
-app:title="Log in"
-        app:titleTextColor="@color/colorWhite"
-        app:titleMarginStart="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark">
+        app:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:title=" Sing up"
+        app:titleMarginStart="300dp"
+        app:titleTextColor="@color/colorWhite">
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -28,7 +28,8 @@ app:title="Log in"
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="269dp"
-        android:layout_height="270dp"
+        android:layout_height="300dp"
+
         android:layout_marginStart="71dp"
         android:layout_marginEnd="71dp"
         android:layout_marginBottom="232dp"
@@ -38,17 +39,50 @@ app:title="Log in"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.602">
+        app:layout_constraintVertical_bias="0.608">
 
 
         <EditText
 
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
+            android:id="@+id/textView_Email"
+            android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
+            android:background="@color/colorWhite"
+            android:hint="E-Mail"
+            android:textAlignment="center"
+            android:textSize="10dp"
+            android:textStyle="bold"
+
+
+            />
+
+        <EditText
+
+            android:id="@+id/textView_Fullname"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginRight="30dp"
+            android:background="@color/colorWhite"
+            android:hint="Full Name"
+            android:textAlignment="center"
+            android:textSize="10dp"
+            android:textStyle="bold"
+
+
+            />
+
+        <EditText
+
+            android:id="@+id/textView_Username"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="110dp"
             android:background="@color/colorWhite"
             android:hint="Username"
             android:textAlignment="center"
@@ -57,53 +91,63 @@ app:title="Log in"
 
         <EditText
 
-
-            android:id="@+id/textView2"
+            android:id="@+id/textView_Password"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="160dp"
             android:background="@color/colorWhite"
             android:hint="Password"
-            android:inputType="textPassword"
             android:textAlignment="center"
             android:textSize="10dp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="93dp"
-            android:layout_marginEnd="88dp"
-            android:layout_marginBottom="22dp"
-            android:background="@color/colorButtons"
-            android:onClick="login"
-            android:text="Log in"
-            android:textColor="@color/colorWhite" />
+        <EditText
+
+            android:id="@+id/textView_RepeatPasswrod"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="210dp"
+            android:background="@color/colorWhite"
+            android:hint="Username"
+            android:textAlignment="center"
+            android:textSize="10dp"
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
 
     <Button
+
         android:id="@+id/button3"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="wrap_content"
         android:layout_height="87dp"
         android:layout_marginStart="162dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="175dp"
         android:background="@drawable/gradient"
-        android:onClick="action1"
-        android:text="Sign up"
+        android:onClick="actionterms"
+        android:text="Next"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+
+    <CheckBox
+
+        android:id="@+id/checkBox"
+        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="224dp"
+        android:layout_marginBottom="232dp"
+        android:text="Terms of use"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
