--- a/app/src/main/res/layout/activity_signup1.xml
+++ b/app/src/main/res/layout/activity_signup1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,149 +7,109 @@
     android:background="@drawable/gradient"
     tools:context=".Singup1">
 
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
+        android:layout_width="match_parent"
         android:id="@+id/toolbar"
+        android:layout_height="@dimen/toolbar"
+        android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/sidex2"
+        android:weightSum="5">
+
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/abc_vector_test"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:onClick="goBack"
+            android:contentDescription="@string/back_text"/>
+
+
+        <TextView
+            android:id="@+id/workout_home_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:text="@string/signup_title"
+            android:textStyle="bold"
+            android:textSize="@dimen/header_text"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sign_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#00BCD4"
-        android:minHeight="?attr/actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:title=" Sing up"
-        app:titleMarginStart="300dp"
-        app:titleTextColor="@color/colorWhite">
-
-    </androidx.appcompat.widget.Toolbar>
-
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="269dp"
-        android:layout_height="300dp"
-
-        android:layout_marginStart="71dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginBottom="232dp"
-        android:background="@color/colorButtons"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.608">
-
-
+        android:paddingHorizontal="@dimen/side_margin2"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
         <EditText
-
-            android:id="@+id/textView_Email"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
-            android:background="@color/colorWhite"
-            android:hint="E-Mail"
-            android:textAlignment="center"
-            android:textSize="10dp"
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:background="@color/transparency_white"
+            android:hint="@string/e_mail"
+            android:paddingHorizontal="@dimen/new_margin"
             android:textStyle="bold"
-
-
-            />
-
+            android:layout_marginBottom="@dimen/margin2"/>
         <EditText
-
-            android:id="@+id/textView_Fullname"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginRight="30dp"
-            android:background="@color/colorWhite"
-            android:hint="Full Name"
-            android:textAlignment="center"
-            android:textSize="10dp"
+            android:id="@+id/fullname"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:hint="@string/full_name"
+            android:background="@color/transparency_white"
             android:textStyle="bold"
-
-
-            />
-
+            android:paddingHorizontal="@dimen/new_margin"
+            android:layout_marginBottom="@dimen/margin2"/>
         <EditText
-
-            android:id="@+id/textView_Username"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="110dp"
-            android:background="@color/colorWhite"
-            android:hint="Username"
-            android:textAlignment="center"
-            android:textSize="10dp"
-            android:textStyle="bold" />
-
+            android:id="@+id/user"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:hint="@string/user"
+            android:background="@color/transparency_white"
+            android:textStyle="bold"
+            android:paddingHorizontal="@dimen/new_margin"
+            android:layout_marginBottom="@dimen/margin2"/>
         <EditText
-
-            android:id="@+id/textView_Password"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="160dp"
-            android:background="@color/colorWhite"
-            android:hint="Password"
-            android:textAlignment="center"
-            android:textSize="10dp"
-            android:textStyle="bold" />
-
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:hint="@string/passw"
+            android:background="@color/transparency_white"
+            android:textStyle="bold"
+            android:paddingHorizontal="@dimen/new_margin"
+            android:layout_marginBottom="@dimen/margin2"/>
         <EditText
+            android:id="@+id/password_repeat"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:hint="@string/repeat_psw"
+            android:background="@color/transparency_white"
+            android:textStyle="bold"
+            android:paddingHorizontal="@dimen/new_margin"
+            android:layout_marginBottom="@dimen/margin2"/>
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
+            android:layout_marginBottom="@dimen/margin2"
+            android:text="@string/terms"
+            android:textColor="@color/colorWhite"/>
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next"
+            android:background="@color/transparency_white"
+            android:paddingHorizontal="@dimen/side_margin"
+            android:layout_gravity="center_horizontal"
+            android:onClick="signup2" />
+    </LinearLayout>
 
-            android:id="@+id/textView_RepeatPasswrod"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="210dp"
-            android:background="@color/colorWhite"
-            android:hint="Username"
-            android:textAlignment="center"
-            android:textSize="10dp"
-            android:textStyle="bold" />
-
-
-    </RelativeLayout>
-
-    <Button
-
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="87dp"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="175dp"
-        android:background="@drawable/gradient"
-        android:onClick="actionterms"
-        android:text="Next"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
-
-    <CheckBox
-
-        android:id="@+id/checkBox"
-        style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="224dp"
-        android:layout_marginBottom="232dp"
-        android:text="Terms of use"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
 
 
