--- a/app/src/main/res/layout/activity_singup2.xml
+++ b/app/src/main/res/layout/activity_singup2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,72 +7,96 @@
     android:background="@drawable/gradient"
     tools:context=".Singup2">
 
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
+        android:layout_width="match_parent"
         android:id="@+id/toolbar"
+        android:layout_height="@dimen/toolbar"
+        android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/sidex2"
+        android:weightSum="5">
+
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/abc_vector_test"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:onClick="goBack"
+            android:contentDescription="@string/back_text"/>
+
+
+        <TextView
+            android:id="@+id/workout_home_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:text="@string/signup_title"
+            android:textStyle="bold"
+            android:textSize="@dimen/header_text"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sign_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#00BCD4"
-        android:minHeight="?attr/actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:title=" Sing up"
-        app:titleMarginStart="300dp"
-        app:titleTextColor="@color/colorWhite">
+        android:paddingHorizontal="@dimen/side_margin2"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
+        <Spinner
+            android:id="@+id/spinner_gender"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:background="@color/transparency_white"
+            android:layout_marginBottom="@dimen/margin2"/>
 
-    </androidx.appcompat.widget.Toolbar>
+        <EditText
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:background="@color/transparency_white"
+            android:hint="@string/birth"
+            android:paddingHorizontal="@dimen/new_margin"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/margin2"
+            android:inputType="date"/>
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:background="@color/transparency_white"
+            android:hint="@string/height"
+            android:paddingHorizontal="@dimen/new_margin"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/margin2"/>
+        <EditText
+            android:id="@+id/fullname"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/textbox_height"
+            android:hint="@string/weight"
+            android:background="@color/transparency_white"
+            android:textStyle="bold"
+            android:paddingHorizontal="@dimen/new_margin"
+            android:layout_marginBottom="@dimen/margin2"/>
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="146dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="32dp"
-        android:text="Gender"
-        android:textAlignment="center"
-        android:textColor="@color/colorBlack"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signup_title"
+            android:background="@color/transparency_white"
+            android:paddingHorizontal="@dimen/side_margin"
+            android:layout_gravity="center_horizontal"
+            android:onClick="home" />
+    </LinearLayout>
+    <!--
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="146dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="132dp"
-        android:text="Age"
-        android:textAlignment="center"
-        android:textColor="@color/colorBlack"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <Button
-        android:id="@+id/malebtn"
-        android:layout_width="205dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:background="@color/colorWhite"
-        android:text="Male"
-        app:layout_constraintEnd_toStartOf="@+id/femalebtn"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
 
-        android:id="@+id/femalebtn"
-        android:layout_width="205dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:background="@color/colorText"
-        android:text="Female "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/spinnerx"
@@ -120,8 +144,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+-->
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
 
 
