--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:button">@color/colorButtons</item>
         <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColorHint">@color/hintC</item>
 
     </style>
 
