--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -56,7 +56,8 @@
             android:background="@color/transparency_white"
             android:textStyle="bold"
             android:paddingHorizontal="@dimen/new_margin"
-            android:layout_marginBottom="@dimen/side_margin"/>
+            android:layout_marginBottom="@dimen/side_margin"
+            android:inputType="textPassword"/>
         <Button
             android:id="@+id/login_btn"
             android:layout_width="wrap_content"
