--- a/app/src/main/res/layout/activity_signup1.xml
+++ b/app/src/main/res/layout/activity_signup1.xml
@@ -54,7 +54,8 @@
             android:hint="@string/e_mail"
             android:paddingHorizontal="@dimen/new_margin"
             android:textStyle="bold"
-            android:layout_marginBottom="@dimen/margin2"/>
+            android:layout_marginBottom="@dimen/margin2"
+            android:inputType="textEmailAddress"/>
         <EditText
             android:id="@+id/fullname"
             android:layout_width="match_parent"
@@ -81,7 +82,8 @@
             android:background="@color/transparency_white"
             android:textStyle="bold"
             android:paddingHorizontal="@dimen/new_margin"
-            android:layout_marginBottom="@dimen/margin2"/>
+            android:layout_marginBottom="@dimen/margin2"
+            android:inputType="textPassword"/>
         <EditText
             android:id="@+id/password_repeat"
             android:layout_width="match_parent"
@@ -90,7 +92,8 @@
             android:background="@color/transparency_white"
             android:textStyle="bold"
             android:paddingHorizontal="@dimen/new_margin"
-            android:layout_marginBottom="@dimen/margin2"/>
+            android:layout_marginBottom="@dimen/margin2"
+            android:inputType="textPassword"/>
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_width="wrap_content"
