--- a/app/src/main/res/layout/activity_create_plan.xml
+++ b/app/src/main/res/layout/activity_create_plan.xml
@@ -34,30 +34,12 @@
             android:textStyle="bold"
             android:textSize="@dimen/header_text"/>
 
-        <TextView
+        <Space
             android:id="@+id/profile_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/profile_text"
-            android:layout_gravity="center"
-            android:textStyle="bold"
             android:textSize="@dimen/header_text"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="goProfile"/>
-
-        <ImageView
-            android:id="@+id/profile_image"
-            android:layout_width="@dimen/header_text"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_disabled"
-            android:clickable="true"
-            android:focusable="true"
-            android:contentDescription="@string/profile_text"
-            android:onClick="goProfile"/>
-
+            android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
