--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -45,7 +45,7 @@
             android:textSize="@dimen/header_text"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="goProfile"/>
+            android:onClick="settings"/>
 
         <ImageView
             android:id="@+id/profile_image"
@@ -53,11 +53,11 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_disabled"
             android:clickable="true"
-            android:focusable="true"
             android:contentDescription="@string/profile_text"
-            android:onClick="goProfile"/>
+            android:focusable="true"
+            android:onClick="settings"
+            app:srcCompat="@android:drawable/ic_menu_manage" />
 
     </LinearLayout>
 
