--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -7,6 +7,54 @@
     tools:context=".Inicio"
     android:background="@drawable/gradient">
     <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/toolbar_workout"
+        android:layout_height="@dimen/toolbar"
+        android:orientation="horizontal">
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/create_toolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:text="Home"
+            android:textStyle="bold"
+            android:textSize="@dimen/header_text"/>
+
+        <TextView
+            android:id="@+id/profile_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/profile_text"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="@dimen/header_text"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="settings"/>
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="@dimen/header_text"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:contentDescription="@string/profile_text"
+            android:focusable="true"
+            android:onClick="settings"
+            app:srcCompat="@android:drawable/ic_menu_preferences" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -17,6 +65,16 @@
             android:layout_height="wrap_content"
             android:onClick="history"
             android:text="History"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:padding="@dimen/margin2"/>
+        <Button
+            android:id="@+id/tracker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="tracker"
+            android:text="Tracker"
+            android:backgroundTint="@color/transparency_white"
             android:textSize="@dimen/header_text"
             android:padding="@dimen/margin2"/>
         <Button
@@ -25,6 +83,16 @@
             android:layout_height="wrap_content"
             android:onClick="workouts"
             android:text="Workouts"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:padding="@dimen/margin2"/>
+        <Button
+            android:id="@+id/prof"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="profile"
+            android:text="Profile"
+            android:backgroundTint="@color/transparency_white"
             android:textSize="@dimen/header_text"
             android:padding="@dimen/margin2"/>
 
