--- a/app/src/main/res/layout/activity_plan_preview.xml
+++ b/app/src/main/res/layout/activity_plan_preview.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:textStyle="bold"
             android:textSize="@dimen/header_text"/>
 
@@ -43,7 +43,7 @@
             android:textSize="@dimen/header_text"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="goProfile"/>
+            android:onClick="settings"/>
 
         <ImageView
             android:id="@+id/profile_image"
@@ -51,11 +51,11 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_disabled"
             android:clickable="true"
-            android:focusable="true"
             android:contentDescription="@string/profile_text"
-            android:onClick="goProfile"/>
+            android:focusable="true"
+            android:onClick="settings"
+            app:srcCompat="@android:drawable/ic_menu_manage" />
 
     </LinearLayout>
 
@@ -64,8 +64,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/start"
         android:layout_below="@id/toolbar_workout"
-        android:layout_marginTop="-55dp"
-        android:layout_marginBottom="62dp"
         android:paddingHorizontal="@dimen/side_margin"
         android:paddingTop="@dimen/top_margin"
         android:paddingBottom="@dimen/top_margin">
@@ -74,6 +72,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <!-- Exercise 1 -->
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -127,7 +127,7 @@
                     android:layout_toRightOf="@id/exercise1"
                     android:text="@string/rest"
                     android:textSize="@dimen/header_text" />
-            </RelativeLayout> <!-- Exercise 1 -->
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
