--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,74 +33,62 @@
             android:text="@string/settings_title"
             android:textSize="@dimen/header_text"
             android:textStyle="bold" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar_workout"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-
-        <TextView
+        <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="@string/Appsettings_title"
-            android:textSize="@dimen/normal_text" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_marginTop="40dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorButtons"
-            android:text="@string/setting1" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorButtons"
-            android:text="@string/setting2" />
-        <Button
-            android:id="@+id/button6"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorButtons"
-            android:text="@string/setting3" />
-        <Button
-            android:id="@+id/button7"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorButtons"
-            android:text="@string/setting4" />
-        <Button
-            android:id="@+id/button8"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorButtons"
-            android:text="@string/setting5" />
-
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/updates"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar_workout"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin2"
+        android:paddingHorizontal="@dimen/side_margin">
 
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:text="@string/setting1"
+            android:layout_marginBottom="@dimen/margin2"/>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:text="@string/setting2"
+            android:layout_marginBottom="@dimen/margin2"/>
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:text="@string/setting3"
+            android:layout_marginBottom="@dimen/margin2"/>
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:text="@string/setting4"
+            android:layout_marginBottom="@dimen/margin2"/>
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/transparency_white"
+            android:textSize="@dimen/header_text"
+            android:text="@string/setting5"
+            android:layout_marginBottom="@dimen/margin2"/>
+    </LinearLayout>
 </RelativeLayout>
