--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,71 +8,74 @@
     android:background="@drawable/gradient"
     android:weightSum="6">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:id="@+id/toolbar_workout"
+        android:layout_height="@dimen/toolbar"
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/back"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
-            android:layout_gravity="start|center"
-
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/abc_vector_test"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
             android:onClick="goBack"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            android:contentDescription="@string/back_text"/>
 
-        <Button
-            android:id="@+id/profile"
-            android:layout_width="50dp"
-            android:layout_height="30dp"
+        <TextView
+            android:id="@+id/workout_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:text="@string/title"
+            android:textSize="@dimen/header_text"
+            android:textStyle="bold" />
 
-            android:layout_gravity="end|center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/profile_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/profile_text"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="@dimen/header_text"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="settings"/>
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="@dimen/header_text"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:contentDescription="@string/profile_text"
+            android:focusable="true"
+            android:onClick="settings"
+            app:srcCompat="@android:drawable/ic_menu_manage" />
 
-        android:text="$Kilometers"
-        android:layout_gravity="center"
-        />
+    </LinearLayout>
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="Walked distance"
-        android:layout_gravity="center"
-        />
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-
-        android:layout_height="581dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
-        android:layout_weight="1"
-
-        android:background="@drawable/gradient"
-        tools:context=".Tracker" />
-    <Space
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_below="@id/toolbar_workout"
+        android:paddingBottom="@dimen/bot_margin"
+        android:layout_marginTop="@dimen/side_margin"
+        android:paddingHorizontal="@dimen/side_margin">
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient"
+            tools:context=".Tracker"/>
+    </RelativeLayout>
 
 
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
