--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Text Sizes -->
     <dimen name="header_text">20sp</dimen>
     <dimen name="normal_text">25sp</dimen>
     <dimen name="small_text">15sp</dimen>
-    <dimen name="toolbar">60dp</dimen>
-    <dimen name="separation">50dp</dimen>
-    <dimen name="side_margin">40dp</dimen>
-    <dimen name="top_margin">30dp</dimen>
+    <dimen name="textbox_height">40dp</dimen>
+
+    <!-- Other Sizes -->
     <dimen name="new_margin">10dp</dimen>
-    <dimen name="button_size">140dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="margin2">20dp</dimen>
-    <dimen name="textbox_height">40dp</dimen>
+    <dimen name="top_margin">30dp</dimen>
+    <dimen name="side_margin">40dp</dimen>
+    <dimen name="separation">50dp</dimen>
+    <dimen name="toolbar">60dp</dimen>
     <dimen name="side_margin2">70dp</dimen>
+    <dimen name="btn">100dp</dimen>
+    <dimen name="button_size">140dp</dimen>
     <dimen name="sidex2">150dp</dimen>
+    <dimen name="bot_margin">200dp</dimen>
 
 </resources>
